# rust_ice_detector

./: .gitignore  README.md  cargo.py  main.py  pyproject.toml
rust_ice_detector/: cargo.py  main.py
