[tool.poetry]
name = "rust_ice_detector"
version = "0.1.0"
description = "A tool to search for internal compiler errors (ICEs) for Rust."
authors = ["Tim Jentzsch <tim-jentzsch@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.27"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
